--- a/src/components/EmergencyContacts/EmergencyContacts.scss
+++ b/src/components/EmergencyContacts/EmergencyContacts.scss
@@ -1,110 +1,194 @@
 header {
     display: flex;
+    background-color: #6A1B9A;
+    width: 100%;
+    top: 0;
     justify-content: space-evenly;
     -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    .ContainerImageReturn {
+    .Menu {
+        width: 90%;
+        max-width: 1000px;
+        margin: auto;
         display: flex;
+        flex-direction: row;
+        justify-content: space-between;
         align-items: center;
-        width: 15%;
-        justify-content: center;
-        .ReturnImg {
-            width: 30px;
-            height: 30px;
-            margin-top: 1%;
+    }
+    .Logo {
+        display: inline-block;
+        margin-right: 1em;
+        color: white;
+        h1 {
+            font-family: 'Tangerine';
+            font-size: 55px;
+        }
+        .Btn-menu {
+            display: none;
         }
     }
-
-    .ContactsInformationTitle {
-        font-size: 25px;
-        text-align: center;
-        font-size: 30px;
-    }
-
-    .ContainerImageAvatar {
-        display: flex;
-        align-items: center;
-        .Avatar {
-            width: 40px;
-            height: 40px;
-            margin-right: 19px;
+    .Enlaces {
+        display: inline-block;
+        text-align: right;
+        a {
+            color: white;
+            margin-right: 5%;
+            text-decoration: none;
+        }
+        a:hover {
+            background: #f2f2f2;
+            color: #4357ad;
         }
     }
 }
 
-    .ContacsInformationInfoContainer{
+    .PersonalInformationInfoContainer{
         display: flex;
-        align-items: center;
+        justify-content: left;
         flex-direction: column;
-        background-color: #b816f18f;
-        height: 100vh;
-        padding-top: 19%;
-        .text {
-            padding-right: 10px;
+        .Title {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 3%;
+            margin-bottom: 3%;
+            .PersonalInformationText {
+                margin-left: 15px;
+                color: #BFBDBD;
+                font-size: 40px;
+            }
+            img {
+                margin-right: 15px;
+                width: 25px;
+                height: 25px;
+                margin-top: 22px;
+            }
         }
-        .ContactInfoInput {
+        .Subtext {
+            margin-left: 15px;
+            font-size: 18px;
+            color: #BFBDBD;
+        }
+        .Form {
+            display: flex;
+            justify-content: left;
+            flex-direction: column;
+            margin-left: 15px;
+            .Form-control {
+                font-family: Roboto;
+                color: #B3B0B0;
+                margin-bottom: 15px;
+                .UserLabel {
+                    font-family: 'Roboto';
+                    font-weight: 32;
+                    color: #B3B0B0;
+                    font-size: 22px;
+                    margin-right: 15px;
+                }
+                .InputLogin {
+                    border: none;
+                    border-bottom: 1px solid #673AB7;
+                    border-radius: 3px;
+                    width: 30%;
+                    margin-bottom: 2%;
+                }
+            }
+            .Form-control-address {
+                display: flex;
+                flex-direction: column;
+                font-family: Roboto;
+                color: #B3B0B0;
+                .InputAddress {
+                    border-bottom: 1px solid #673AB7;
+                    border-radius: 3px;
+                    width: 90%;
+                    margin-left: 11px;
+                    margin-bottom: 2%;
+                    height: 90px;
+                }
+            }
+        }
+        .BtnPersonalInfo {
+            width: 155px;
+            background-color: #FF4081;
+            color: white;
+            font-family: Roboto;
+            font-size: 35px;
+            height: 65px;
+            padding: 2px 15px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 3%;
             border-radius: 10px;
-        }
-        .ContainerIcons {
-            display: flex;
-            justify-content: flex-end;
-            width: 100%;
-            margin-top: 5px;
-            margin-bottom: 5px;
-            .Icons {
-                width: 15px;
-                height: 15px;
-            }
-        }
-        .ButtonHomeContainer {
-            display: flex;
-            justify-content: center;
-            .ButtonPersonalInformation {
-                padding: 2px 15px;
-                margin-top: 13px;
-                border-radius: 11px;
-                font-size: 19px;
-                box-shadow: 1px 0px 0px grey;
-            }
         }
     }
 
-// @media(max-width:576px) {
-//     header {
-//         .ContainerImageReturn {
-//             .ReturnImg {
-//             }
-//         }
-    
-//         .ContactsInformationTitle {
-//         }
-    
-//         .ContainerImageAvatar {
-//             .Avatar {
-//             }
-//         }
-//     }
-    
-//         .ContacsInformationInfoContainer{
-//             .text {
-//             }
-//             .ContactInfoInput {
-//             }
-//             .ContainerIcons {
-//                 .Icons {
-//                 }
-//             }
-//             .ButtonHomeContainer {
-//                 .ButtonPersonalInformation {
-//             }
-//         }
-// }
-    
-
-
+    @media(max-width:576px) {
+        header {
+            .Menu {
+            }
+            .Logo {
+                h1 {
+                    font-size: 30px;
+                }
+                .Btn-menu {
+                }
+            }
+            .Enlaces {
+                a {
+                    font-size: 12px;
+                }
+                a:hover {
+                }
+            }
+        }
         
-    
+            .PersonalInformationInfoContainer{
+                .Title {
+                    .PersonalInformationText {
+                        font-size: 18px;
+                    }
+                    img {
+                        width: 20px;
+                        margin-top: 16px;
+                    }
+                }
+                .Form {
+                    .Form-control {
+                        .UserLabel {
+                            font-size: 14px;
+                        }
+                        .InputLogin {
+                        }
+                    }
+                    .Form-control-address {
+                        .InputAddress {
+                            margin-left: 6px;
+                            height: 60px;
+                    }
+                }
+            }
+                .EmergencyText {
+                    // font-size: 16px;
+                }
+                .EmergencySubtext {
+                    // margin-top: 5px;
+                    // margin-bottom: 0;
+                    // font-size: 10px;
+                }
+                .Addimage {
+                    width: 15px;
+                    height: 15px;
+                }
+                .BtnPersonalInfo {
+                    width: 100px;
+                    font-size: 20px;
+                    height: 35px;
+                    padding: 1px 10px;
+                }
+            }
+    }
+
         
     
 
