--- a/src/components/Newpassword/Newpassword.scss
+++ b/src/components/Newpassword/Newpassword.scss
@@ -1,196 +1,282 @@
-header {
+.MainContainer {
     display: flex;
-    .ContainerImageNewpassword {
+    justify-content: center;
+    .ContainerLogin {
+        width: 70%;
+        height: 88vh;
         display: flex;
-        align-items: center;
-        width: 15%;
         justify-content: center;
-    }
-
-    .NewpasswordTitle {
-        width: 50%;
-        text-align: center;
-        font-size: 30px;
-    }
-
-    .ContainerImageLogo {
-        display: flex;
         align-items: center;
-        .Logo {
-            width: 100px;
-            height: 40px;
-            margin-right: 19px;
-        }
-    }
-}
-
-hr {
-    margin: 0;
-}
-
-    .NewpasswordInfoContainer{
-        width: 100%;
-        height: 80vh;
-        background-color: #770b9c87;
-        .Newpassword {
-            text-align: center;
-            padding-top: 5%;
-            color: #fff;
-            margin-top: 0;
-        }
-        .FormNewpassword {
+        border: 1px solid darkgray;
+        border-radius: 2%;
+        margin-top: 2%;
+        -webkit-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+        -moz-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+        box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+        .LoginMain{
+            width: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            .InfoContainer {
-                margin-top: 2%;
+            height: 100%;
+            border: none;
+            // border-right: 1px solid;
+            background-color: #6A1B9A;
+            .LoginTitle {
+                font-family: 'Tangerine';
+                font-weight: 100;
+                font-size: 75px;
+                color: white;
+                margin-top: 0%;
+                margin-bottom: 2%;
             }
-            .ButtonNewpassword {
-                padding: 2px 15px;
-                margin-top: 13px;
-                border-radius: 11px;
-                font-size: 19px;
-                box-shadow: 1px 0px 0px grey;
+            .LoginSubtitle {
+                font-family: 'Roboto';
+                font-weight: 40;
+                color: white;
+                font-size: 20px;
+            }
+            .LoginParagraph {
+                font-weight: 30;
+                text-align: center;
+                font-size: 15px;
+                color: white;
+            }
+        }
+        .col-sm-6 {
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100%;
+            border-right: 1px solid;
+            border-right: none;
+            .WelcomeTitle {
+                font-family: 'Roboto';
+                font-weight: 50;
+                color: #B3B0B0;
+                margin-top: 0;
+            }
+            .WelcomeSubtitle {
+                font-weight: 40;
+                color: #B3B0B0;
+                margin-top: 0;
+            }
+            .UserLabel {
+                font-family: 'Roboto';
+                font-weight: 32;
+                color: #B3B0B0;
+            }
+            .InputLogin {
+                border: none;
+                border-bottom: 1px solid #673AB7;
+                border-radius: 3px;
+                width: 70%;
+                margin-bottom: 6%;
+            }
+            .LinkPassword {
+                font-family: 'Roboto';
+                font-weight: 25;
+                color: #B3B0B0;
+                text-decoration: none;
+                margin-bottom: 5%;
+            }
+            .LinkRegister {
+                font-family: 'Roboto';
+                font-weight: 25;
+                color: #B3B0B0;
+                text-decoration: none;
+                margin-bottom: 5%;
+            }
+            .BtnLogin {
+                background-color: #FF4081;
+                width: 28%;
+                height: 6%;
+                font-size: 21px;
+                border-radius: 7px;
+                color: white;
+                font-family: Roboto;
             }
         }
     }
+}
 
-    @media(max-width:576px) {
-        header {
-            display: flex;
-            justify-content: space-around;
-            .ContainerImageNewpassword {
-            }
-        
-            .NewpasswordTitle {
-                width: 50%;
-                text-align: left;
-                font-size: 24px;
-            }
-        
-            .ContainerImageLogo {
-                .Logo {
-                    height: 48px;
-                    width: 108px;
+@media(max-width:576px) {
+    .MainContainer {
+        .ContainerLogin {
+            margin-top: 5%;
+            height: 94vh;
+            flex-direction: column;
+            .LoginMain{
+                width: 100%;
+                height: 25%;
+                text-align: center;
+                .LoginTitle {
+                    font-size: 58px;
+                }
+                .LoginSubtitle {
+                    display: none;
+                }
+                .LoginParagraph {
+                    display: none;
                 }
             }
-        }
-        
-            .NewpasswordInfoContainer{
-                height: 90vh;
-                .Newpassword {
+            .col-sm-6 {
+                width: 100%;
+                height: 75%;
+                text-align: center;
+                .WelcomeTitle {
                     font-size: 24px;
-                    padding-top: 11%;
                 }
-                .FormNewpassword {
-                    .InfoContainer {
-                        .Email {
-                            color: white;
-                            font-size: 22px;
-                        }
-                        .EmailInput {
-                            padding: 9px 35px;
-                            border-radius: 15px;
-                            margin-top: 10px;
-                        }
-                    }
-                    .ButtonNewpassword {
-                        padding: 8px 19px;
-                        font-size: 25px;
-                        margin-top: 30px;
-                    }
+                .WelcomeSubtitle {
+                    font-size: 16px;
+                }
+                .UserLabel {
+                    font-size: 16px;
+                }
+                .LinkPassword {
+                    font-size: 14px;
+                }
+                .LinkRegister {
+                    font-size: 14px;
+                }
+                .BtnLogin {
+                    width: 40%;
+                    height: 11%;
+                    font-size: 21px;
+                    margin-top: 4%;
                 }
             }
+        }
     }
+}
 
-    @media(min-width:768px) {
-        header {
+@media(min-width:768px) {
+    .MainContainer {
+        .ContainerLogin {
+            width: 76%;
+            height: 70vh;
+            margin-top: 14%;
+            .col-sm-6 {
+                text-align: center;
+                .BtnLogin {
+                    width: 40%;
+                    height: 8%;
+                    font-size: 24px;
+                    margin-top: 4%;
+                }
+            }
+        }
+    }
+}
+
+@media(min-width:1200px) {
+    .MainContainer {
+        display: flex;
+        justify-content: center;
+        .ContainerLogin {
+            width: 70%;
+            height: 88vh;
             display: flex;
-            justify-content: space-evenly;
-            .ContainerImageNewpassword {
+            justify-content: center;
+            align-items: center;
+            border: 1px solid darkgray;
+            border-radius: 2%;
+            margin-top: 2%;
+            -webkit-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+            -moz-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+            box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+            .LoginMain{
+                width: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                height: 100%;
+                border: none;
+                background-color: #6A1B9A;
+                .LoginTitle {
+                    font-family: 'Tangerine';
+                    font-weight: 100;
+                    font-size: 75px;
+                    color: white;
+                    margin-top: 0%;
+                    margin-bottom: 2%;
+                }
+                .LoginSubtitle {
+                    font-family: 'Roboto';
+                    font-weight: 40;
+                    color: white;
+                    font-size: 20px;
+                }
+                .LoginParagraph {
+                    font-weight: 30;
+                    text-align: center;
+                    font-size: 15px;
+                    color: white;
+                }
             }
-        
-            .NewpasswordTitle {
-                text-align: left;
-                font-size: 35px;
-            }
-        
-            .ContainerImageLogo {
-                .Logo {
-                    height: 70px;
-                    width: 120px;
-                    margin-right: 30px;
+            .col-sm-6 {
+                width: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                flex-direction: column;
+                height: 100%;
+                border-right: 1px solid;
+                border-right: none;
+                .WelcomeTitle {
+                    font-family: 'Roboto';
+                    font-weight: 50;
+                    color: #B3B0B0;
+                    margin-top: 0;
+                }
+                .WelcomeSubtitle {
+                    font-weight: 40;
+                    color: #B3B0B0;
+                    margin-top: 0;
+                }
+                .UserLabel {
+                    font-family: 'Roboto';
+                    font-weight: 32;
+                    color: #B3B0B0;
+                }
+                .InputLogin {
+                    border: none;
+                    border-bottom: 1px solid #673AB7;
+                    border-radius: 3px;
+                    width: 70%;
+                    margin-bottom: 6%;
+                }
+                .LinkPassword {
+                    font-family: 'Roboto';
+                    font-weight: 25;
+                    color: #B3B0B0;
+                    text-decoration: none;
+                    margin-bottom: 5%;
+                }
+                .LinkRegister {
+                    font-family: 'Roboto';
+                    font-weight: 25;
+                    color: #B3B0B0;
+                    text-decoration: none;
+                    margin-bottom: 5%;
+                }
+                .BtnLogin {
+                    background-color: #FF4081;
+                    width: 45%;
+                    height: 8%;
+                    font-size: 24px;
+                    margin-top: 4%;
+                    border-radius: 7px;
+                    color: white;
+                    font-family: Roboto;
                 }
             }
         }
-        
-            .NewpasswordInfoContainer{
-                height: 91vh;
-                .Newpassword {
-                    font-size: 33px;
-                    padding-top: 11%;
-                }
-                .FormNewpassword {
-                    .InfoContainer {
-                        .Email {
-                            color: white;
-                            font-size: 30px;
-                        }
-                        .EmailInput {
-                            padding: 10px 100px;
-                            margin-top: 10px;
-                            margin-bottom: 10px;
-                            border-radius: 15px;
-                            font-size: 30px;
-                        }
-                    }
-                    .ButtonNewpassword {
-                        padding: 8px 26px;
-                        font-size: 34px;
-                        margin-top: 30px;
-                    }
-                }
-            }
     }
+}
 
-    @media(min-width:1200px) {
-        header {
-            justify-content: space-evenly;
-            .ContainerImageNewpassword {
-            }
-        
-            .NewpasswordTitle {
-                font-size: 44px;
-                width: 66%;
-            }
-        
-            .ContainerImageLogo {
-                .Logo {
-                    height: 85px;
-                    width: 131px;
-                }
-            }
-        }
-        
-            .NewpasswordInfoContainer{
-                .Newpassword {
-                    font-size: 50px;
-                }
-                .FormNewpassword {
-                    .InfoContainer {
-                        .Email {
-                            font-size: 42px;
-                        }
-                        .EmailInput {
-                            padding: 10px 150px;
-                            font-size: 38px;
-                        }
-                    }
-                    .ButtonNewpassword {
-                        padding: 11px 37px;
-                        font-size: 46px;
-                    }
-                }
-            }
-    }
