--- a/src/components/Recovery/Recovery.scss
+++ b/src/components/Recovery/Recovery.scss
@@ -1,207 +1,284 @@
-header {
+.MainContainer {
     display: flex;
-    .ContainerImageRetrun {
+    justify-content: center;
+    .ContainerLogin {
+        width: 70%;
+        height: 88vh;
         display: flex;
-        align-items: center;
-        width: 15%;
         justify-content: center;
-        .ReturnImg {
-            width: 30px;
-            height: 30px;
-            margin-top: 1%;
-        }
-    }
-
-    .RecoveryTitle {
-        width: 50%;
-        text-align: center;
-        font-size: 30px;
-    }
-
-    .ContainerImageLogo {
-        display: flex;
         align-items: center;
-        .Logo {
-            width: 100px;
-            height: 40px;
-            margin-right: 19px;
-        }
-    }
-}
-
-hr {
-    margin: 0;
-}
-
-    .RecoverInfoContainer{
-        width: 100%;
-        height: 80vh;
-        background-color: #770b9c87;
-        .Recovery {
-            text-align: center;
-            padding-top: 5%;
-            color: #fff;
-            margin-top: 0;
-        }
-        .FormRecovery {
+        border: 1px solid darkgray;
+        border-radius: 2%;
+        margin-top: 2%;
+        -webkit-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+        -moz-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+        box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+        .LoginMain{
+            width: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            .InfoContainer {
-                margin-top: 2%;
+            height: 100%;
+            border: none;
+            // border-right: 1px solid;
+            background-color: #6A1B9A;
+            .LoginTitle {
+                font-family: 'Tangerine';
+                font-weight: 100;
+                font-size: 75px;
+                color: white;
+                margin-top: 0%;
+                margin-bottom: 2%;
             }
-            .ButtonRecovery {
-                padding: 2px 15px;
-                margin-top: 13px;
-                border-radius: 11px;
-                font-size: 19px;
-                box-shadow: 1px 0px 0px grey;
+            .LoginSubtitle {
+                font-family: 'Roboto';
+                font-weight: 40;
+                color: white;
+                font-size: 20px;
+            }
+            .LoginParagraph {
+                font-weight: 30;
+                text-align: center;
+                font-size: 15px;
+                color: white;
+            }
+        }
+        .col-sm-6 {
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100%;
+            border-right: 1px solid;
+            border-right: none;
+            .WelcomeTitle {
+                font-family: 'Roboto';
+                font-weight: 50;
+                color: #B3B0B0;
+                margin-top: 0;
+            }
+            .WelcomeSubtitle {
+                font-weight: 40;
+                color: #B3B0B0;
+                margin-top: 0;
+            }
+            .UserLabel {
+                font-family: 'Roboto';
+                font-weight: 32;
+                color: #B3B0B0;
+            }
+            .InputLogin {
+                border: none;
+                border-bottom: 1px solid #673AB7;
+                border-radius: 3px;
+                width: 70%;
+                margin-bottom: 6%;
+            }
+            .LinkPassword {
+                font-family: 'Roboto';
+                font-weight: 25;
+                color: #B3B0B0;
+                text-decoration: none;
+                margin-bottom: 5%;
+            }
+            .LinkRegister {
+                font-family: 'Roboto';
+                font-weight: 25;
+                color: #B3B0B0;
+                text-decoration: none;
+                margin-bottom: 5%;
+            }
+            .BtnLogin {
+                background-color: #FF4081;
+                width: 28%;
+                height: 6%;
+                font-size: 21px;
+                border-radius: 7px;
+                color: white;
+                font-family: Roboto;
             }
         }
     }
+}
 
-    @media(max-width:576px) {
-        header {
-            display: flex;
-            justify-content: center;
-            .ContainerImageRetrun {
-                .ReturnImg {
+@media(max-width:576px) {
+    .MainContainer {
+        .ContainerLogin {
+            margin-top: 5%;
+            height: 94vh;
+            flex-direction: column;
+            .LoginMain{
+                width: 100%;
+                height: 25%;
+                text-align: center;
+                .LoginTitle {
+                    font-size: 58px;
+                }
+                .LoginSubtitle {
+                    display: none;
+                }
+                .LoginParagraph {
+                    display: none;
                 }
             }
-        
-            .RecoveryTitle {
-                font-size: 24px;
-            }
-        
-            .ContainerImageLogo {
-                .Logo {
-                    height: 57px;
-                    margin-right: 15px;
+            .col-sm-6 {
+                width: 100%;
+                height: 75%;
+                .WelcomeTitle {
+                    font-size: 24px;
+                    text-align: center;
+                    margin-bottom: 18%;
+                }
+                .WelcomeSubtitle {
+                    font-size: 18px;
+                }
+                .UserLabel {
+                    font-size: 16px;
+                }
+                .LinkPassword {
+                    font-size: 14px;
+                }
+                .LinkRegister {
+                    font-size: 14px;
+                }
+                .BtnLogin {
+                    width: 70%;
+                    height: 12%;
+                    font-size: 16px;
+                    margin-top: 5%;
                 }
             }
         }
-        
-            .RecoverInfoContainer{
-                height: 90vh;
-                .Recovery {
-                    padding-top: 25px;
-                    padding-left: 5px;
-                    padding-right: 5px;
-                }
-                .FormRecovery {
-                    .InfoContainer {
-                        .Email {
-                            color: white;
-                            font-size: 21px;
-                        }
-                        .EmailInput {
-                            border-radius: 15px;
-                            font-size: 20px;
-                            padding: 10px 39px;
-                            margin-top: 12px;
-                            margin-bottom: 12px;
-                        }
-                    }
-                    .ButtonRecovery {
-                        padding: 6px 31px;
-                        font-size: 25px;
-                    }
-                }
     }
 }
 
 @media(min-width:768px) {
-    header {
-        display: flex;
-        justify-content: space-around;
-        .ContainerImageRetrun {
-            .ReturnImg {
-                width: 40px;
-                height: 40px;
-            }
-        }
-    
-        .RecoveryTitle {
-            font-size: 31px;
-        }
-    
-        .ContainerImageLogo {
-            .Logo {
-                height: 70px;
-                margin-right: 23px;
+    .MainContainer {
+        .ContainerLogin {
+            width: 76%;
+            height: 70vh;
+            margin-top: 14%;
+            .col-sm-6 {
+                .WelcomeTitle {
+                    text-align: center;
+                    font-size: 23px;
+                    margin-bottom: 18%;                
+                }
+                .BtnLogin {
+                    width: 60%;
+                    height: 9%;
+                    margin-top: 10%;
+                }
             }
         }
     }
-    
-        .RecoverInfoContainer{
-            height: 93vh;
-            .Recovery {
-                padding-top: 9%;
-                font-size: 29px;
-            }
-            .FormRecovery {
-                .InfoContainer {
-                    .Email {
-                        font-size: 36px;
-                        color: white;
-                    }
-                    .EmailInput {
-                        border-radius: 15px;
-                        padding: 13px 100px;
-                        font-size: 30px;
-                        margin-top: 15px;
-                        margin-bottom: 15px;
-                    }
-                }
-                .ButtonRecovery {
-                    font-size: 31px;
-                    padding: 7px 40px;
-                }
-            }
-}
 }
 
 @media(min-width:1200px) {
-    header {
-        .ContainerImageRetrun {
-            .ReturnImg {
-                width: 45px;
-                height: 45px;
+    .MainContainer {
+        display: flex;
+        justify-content: center;
+        .ContainerLogin {
+            width: 70%;
+            height: 88vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid darkgray;
+            border-radius: 2%;
+            margin-top: 2%;
+            -webkit-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+            -moz-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+            box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+            .LoginMain{
+                width: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                height: 100%;
+                border: none;
+                background-color: #6A1B9A;
+                .LoginTitle {
+                    font-family: 'Tangerine';
+                    font-weight: 100;
+                    font-size: 75px;
+                    color: white;
+                    margin-top: 0%;
+                    margin-bottom: 2%;
+                }
+                .LoginSubtitle {
+                    font-family: 'Roboto';
+                    font-weight: 40;
+                    color: white;
+                    font-size: 20px;
+                }
+                .LoginParagraph {
+                    font-weight: 30;
+                    text-align: center;
+                    font-size: 15px;
+                    color: white;
+                }
             }
-        }
-    
-        .RecoveryTitle {
-            font-size: 47px;
-        }
-    
-        .ContainerImageLogo {
-            .Logo {
-                height: 86px;
+            .col-sm-6 {
+                width: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                height: 100%;
+                border-right: 1px solid;
+                border-right: none;
+                .WelcomeTitle {
+                    font-family: 'Roboto';
+                    font-weight: 50;
+                    color: #B3B0B0;
+                    margin-top: 0;
+                }
+                .WelcomeSubtitle {
+                    font-weight: 40;
+                    color: #B3B0B0;
+                    margin-top: 0;
+                }
+                .UserLabel {
+                    font-family: 'Roboto';
+                    font-weight: 32;
+                    color: #B3B0B0;
+                }
+                .InputLogin {
+                    border: none;
+                    border-bottom: 1px solid #673AB7;
+                    border-radius: 3px;
+                    width: 70%;
+                    margin-bottom: 6%;
+                }
+                .LinkPassword {
+                    font-family: 'Roboto';
+                    font-weight: 25;
+                    color: #B3B0B0;
+                    text-decoration: none;
+                    margin-bottom: 5%;
+                }
+                .LinkRegister {
+                    font-family: 'Roboto';
+                    font-weight: 25;
+                    color: #B3B0B0;
+                    text-decoration: none;
+                    margin-bottom: 5%;
+                }
+                .BtnLogin {
+                    background-color: #FF4081;
+                    width: 60%;
+                    height: 8%;
+                    font-size: 21px;
+                    border-radius: 7px;
+                    color: white;
+                    font-family: Roboto;
+                }
             }
         }
     }
-    
-        .RecoverInfoContainer{
-            .Recovery {
-                font-size: 40px;
-            }
-            .FormRecovery {
-                .InfoContainer {
-                    .Email {
-                        font-size: 42px;
-                    }
-                    .EmailInput {
-                        padding: 18px 150px;
-                        font-size: 35px;
-                        margin-top: 25px;
-                        margin-bottom: 25px;
-                    }
-                }
-                .ButtonRecovery {
-                    font-size: 40px;
-                    padding: 9px 47px;
-                }
-            }
 }
-}
+
