--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -1,194 +1,269 @@
-header {
+.MainContainer {
     display: flex;
-    .ContainerImageRetrun {
+    justify-content: center;
+    .ContainerLogin {
+        width: 70%;
+        height: 88vh;
         display: flex;
-        align-items: center;
-        width: 15%;
         justify-content: center;
-        .ReturnImg {
-            width: 30px;
-            height: 30px;
-            margin-top: 1%;
-        }
-    }
-
-    .RegisterTitle {
-        width: 50%;
-        text-align: center;
-        font-size: 30px;
-    }
-
-    .ContainerImageLogo {
-        display: flex;
         align-items: center;
-        .Logo {
-            width: 100px;
-            height: 40px;
-            margin-right: 19px;
-        }
-    }
-}
-
-    .RegisterInfoContainer{
-        width: 100%;
-        height: 80vh;
-        background-color: #770b9c87;
-        .FormRegister {
+        border: 1px solid darkgray;
+        border-radius: 2%;
+        margin-top: 2%;
+        -webkit-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+        -moz-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+        box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+        .LoginMain{
+            width: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            .InfoContainer {
-                margin-top: 2%;
+            height: 100%;
+            border: none;
+            // border-right: 1px solid;
+            background-color: #6A1B9A;
+            .LoginTitle {
+                font-family: 'Tangerine';
+                font-weight: 100;
+                font-size: 75px;
+                color: white;
+                margin-top: 0%;
+                margin-bottom: 2%;
             }
-            .ButtonRegister {
-                padding: 2px 15px;
-                margin-top: 13px;
-                border-radius: 11px;
-                font-size: 19px;
-                box-shadow: 1px 0px 0px grey;
+            .LoginSubtitle {
+                font-family: 'Roboto';
+                font-weight: 40;
+                color: white;
+                font-size: 20px;
+            }
+            .LoginParagraph {
+                font-weight: 30;
+                text-align: center;
+                font-size: 15px;
+                color: white;
+            }
+        }
+        .col-sm-6 {
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100%;
+            border-right: 1px solid;
+            border-right: none;
+            .WelcomeTitle {
+                font-family: 'Roboto';
+                font-weight: 50;
+                color: #B3B0B0;
+                margin-top: 0;
+            }
+            .WelcomeSubtitle {
+                font-weight: 40;
+                color: #B3B0B0;
+                margin-top: 0;
+            }
+            .UserLabel {
+                font-family: 'Roboto';
+                font-weight: 32;
+                color: #B3B0B0;
+            }
+            .InputLogin {
+                border: none;
+                border-bottom: 1px solid #673AB7;
+                border-radius: 3px;
+                width: 70%;
+                margin-bottom: 6%;
+            }
+            .LinkPassword {
+                font-family: 'Roboto';
+                font-weight: 25;
+                color: #B3B0B0;
+                text-decoration: none;
+                margin-bottom: 5%;
+            }
+            .LinkRegister {
+                font-family: 'Roboto';
+                font-weight: 25;
+                color: #B3B0B0;
+                text-decoration: none;
+                margin-bottom: 5%;
+            }
+            .BtnLogin {
+                background-color: #FF4081;
+                width: 28%;
+                height: 6%;
+                font-size: 21px;
+                border-radius: 7px;
+                color: white;
+                font-family: Roboto;
             }
         }
     }
+}
 
-    @media(max-width:576px) {
-        header {
-            .ContainerImageRetrun {
-                .ReturnImg {
-                }
-            }
-        
-            .RegisterTitle {
-            }
-        
-            .ContainerImageLogo {
-                .Logo {
-                }
-            }
-        }
-        
-            .RegisterInfoContainer{
-                height: 86vh;
-                display: flex;
+@media(max-width:576px) {
+    .MainContainer {
+        .ContainerLogin {
+            margin-top: 5%;
+            height: 94vh;
+            flex-direction: column;
+            .LoginMain{
+                width: 100%;
+                height: 25%;
                 text-align: center;
-                justify-content: center;
-                flex-direction: column;
-                p {
-                    color: white;
-                    margin-bottom: 9px;
-                    margin-top: 0%;
+                .LoginTitle {
+                    font-size: 58px;
+                }
+                .LoginSubtitle {
+                    display: none;
+                }
+                .LoginParagraph {
+                    display: none;
+                }
+            }
+            .col-sm-6 {
+                width: 100%;
+                height: 75%;
+                .WelcomeTitle {
+                    font-size: 26px;
+                }
+                .WelcomeSubtitle {
+                    font-size: 18px;
+                }
+                .UserLabel {
+                    font-size: 16px;
+                }
+                .LinkPassword {
+                    font-size: 14px;
+                }
+                .LinkRegister {
+                    font-size: 14px;
+                }
+                .BtnLogin {
+                    width: 35%;
+                    height: 10%;
                     font-size: 20px;
                 }
-                .FormRegister {
-                    .InfoContainer {
-                        .User {
-                            color: white;
-                        }
-                        .UserInput {
-                            border-radius: 10px;
-                        }
-                    }
-                    .ButtonRegister {
-                        border-radius: 13px;
-                        margin-top: 21px;
-                    }
-                }
-            }
-    }
-
-    @media(min-width:768px) {
-        header {
-            justify-content: space-around;
-            .ContainerImageRetrun {
-                .ReturnImg {
-                    height: 50px;
-                }
-            }
-        
-            .RegisterTitle {
-            }
-        
-            .ContainerImageLogo {
-                .Logo {
-                }
             }
         }
-        
-            .RegisterInfoContainer{
-                height: 93vh;
+    }
+}
+
+@media(min-width:768px) {
+    .MainContainer {
+        .ContainerLogin {
+            width: 76%;
+            height: 70vh;
+            margin-top: 14%;
+        }
+    }
+}
+
+@media(min-width:1200px) {
+    .MainContainer {
+        display: flex;
+        justify-content: center;
+        .ContainerLogin {
+            width: 70%;
+            height: 88vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid darkgray;
+            border-radius: 2%;
+            margin-top: 2%;
+            -webkit-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+            -moz-box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+            box-shadow: 3px 6px 10px 0px rgba(245,237,245,1);
+            .LoginMain{
+                width: 50%;
                 display: flex;
-                text-align: center;
                 justify-content: center;
+                align-items: center;
                 flex-direction: column;
-                p {
+                height: 100%;
+                border: none;
+                background-color: #6A1B9A;
+                .LoginTitle {
+                    font-family: 'Tangerine';
+                    font-weight: 100;
+                    font-size: 75px;
                     color: white;
-                    font-size: 35px;
-                    margin-bottom: 10%;
+                    margin-top: 0%;
+                    margin-bottom: 2%;
+                }
+                .LoginSubtitle {
+                    font-family: 'Roboto';
+                    font-weight: 40;
+                    color: white;
+                    font-size: 20px;
+                }
+                .LoginParagraph {
+                    font-weight: 30;
+                    text-align: center;
+                    font-size: 15px;
+                    color: white;
+                }
+            }
+            .col-sm-6 {
+                width: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                height: 100%;
+                border-right: 1px solid;
+                border-right: none;
+                .WelcomeTitle {
+                    font-family: 'Roboto';
+                    font-weight: 50;
+                    color: #B3B0B0;
                     margin-top: 0;
                 }
-                .FormRegister {
-                    .InfoContainer {
-                        .User {
-                            color: white;
-                            font-size: 23px;
-                        }
-                        .UserInput {
-                            padding: 6%;
-                            border-radius: 18%;
-                            margin-top: 7px;
-                        }
-                    }
-                    .ButtonRegister {
-                        border-radius: 14px;
-                        margin-top: 27px;
-                        padding: 24px 36px;
-                        font-size: 28px;
-                    }
+                .WelcomeSubtitle {
+                    font-weight: 40;
+                    color: #B3B0B0;
+                    margin-top: 0;
                 }
-            }
-    }
-
-    @media(min-width:1200px) {
-        header {
-            .ContainerImageRetrun {
-                .ReturnImg {
-                    height: 56px;
-                    width: 45px;
+                .UserLabel {
+                    font-family: 'Roboto';
+                    font-weight: 32;
+                    color: #B3B0B0;
                 }
-            }
-        
-            .RegisterTitle {
-                width: 50%;
-                font-size: 46px;
-            }
-        
-            .ContainerImageLogo {
-                .Logo {
-                    height: 75px;
+                .InputLogin {
+                    border: none;
+                    border-bottom: 1px solid #673AB7;
+                    border-radius: 3px;
+                    width: 70%;
+                    margin-bottom: 6%;
+                }
+                .LinkPassword {
+                    font-family: 'Roboto';
+                    font-weight: 25;
+                    color: #B3B0B0;
+                    text-decoration: none;
+                    margin-bottom: 5%;
+                }
+                .LinkRegister {
+                    font-family: 'Roboto';
+                    font-weight: 25;
+                    color: #B3B0B0;
+                    text-decoration: none;
+                    margin-bottom: 5%;
+                }
+                .BtnLogin {
+                    background-color: #FF4081;
+                    width: 28%;
+                    height: 6%;
+                    font-size: 21px;
+                    border-radius: 7px;
+                    color: white;
+                    font-family: Roboto;
                 }
             }
         }
-        
-            .RegisterInfoContainer{
-                p {
-                    font-size: 50px;
-                    margin-bottom: 5%;
-                }
-                .FormRegister {
-                    .InfoContainer {
-                        .User {
-                            font-size: 30px;
-                        }
-                        .UserInput {
-                            padding: 20px 100px;
-                            border-radius: 24%;
-                        }
-                    }
-                    .ButtonRegister {
-                        padding: 18px 36px;
-                        font-size: 35px;
-                    }
-                }
-            }
-
     }
+}
+
