--- a/src/components/RegisterTables/RegisterTables.scss
+++ b/src/components/RegisterTables/RegisterTables.scss
@@ -1,50 +1,55 @@
 header {
     display: flex;
+    background-color: #6A1B9A;
+    width: 100%;
+    top: 0;
     justify-content: space-evenly;
     -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    .ContainerImageReturn {
+    .Menu {
+        width: 90%;
+        max-width: 1000px;
+        margin: auto;
         display: flex;
+        flex-direction: row;
+        justify-content: space-between;
         align-items: center;
-        width: 15%;
-        justify-content: center;
-        .ReturnImg {
-            width: 30px;
-            height: 30px;
-            margin-top: 1%;
+    }
+    .Logo {
+        display: inline-block;
+        margin-right: 1em;
+        color: white;
+        h1 {
+            font-family: 'Tangerine';
+            font-size: 55px;
+        }
+        .Btn-menu {
+            display: none;
         }
     }
-
-    .ContactsInformationTitle {
-        width: 50%;
-        text-align: center;
-        font-size: 30px;
-    }
-
-    .ContainerImageAvatar {
-        display: flex;
-        align-items: center;
-        .Avatar {
-            width: 40px;
-            height: 40px;
-            margin-right: 19px;
+    .Enlaces {
+        display: inline-block;
+        text-align: right;
+        a {
+            color: white;
+            margin-right: 5%;
+            text-decoration: none;
+        }
+        a:hover {
+            background: #f2f2f2;
+            color: #4357ad;
         }
     }
-}
-
-hr {
-    margin: 0;
 }
 
     .GraphicInformationInfoContainer{
         display: flex;
         align-items: center;
         flex-direction: column;
-        background-color: #b007eab3;
         height: 100vh;
         .GraphicInformationText {
-            color: white;
+            color: #BFBDBD;;
         }
         .ViewGraphic {
             display: flex;
@@ -54,7 +59,35 @@ hr {
                 margin-left: 20%;
             }
         }
+    }
 
+    @media(max-width:576px) {
+        header {
+            .Menu {
+            }
+            .Logo {
+                h1 {
+                    font-size: 30px;
+                }
+                .Btn-menu {
+                }
+            }
+            .Enlaces {
+                a {
+                    font-size: 10px;
+                }
+                a:hover {
+                }
+            }
+        }
         
-           
+            .GraphicInformationInfoContainer{
+                .GraphicInformationText {
+                    font-size: 14px;
+                }
+                .ViewGraphic {
+                    .AddBtn {
+                    }
+                }
+            }
     }
